src/patternfly/components/CodeEditor/code-editor.scss
// @debug $code-editor; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss

:where(:root), :where(.#{$code-editor}) {
  // controls
  --#{$code-editor}__controls--PaddingInlineStart: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__controls--Gap: var(--pf-t--global--spacer--xs);
  --#{$code-editor}__controls--c-button--m-control--Color: var(--pf-t--global--icon--color--regular);
  --#{$code-editor}__controls--c-button--m-control--disabled--after--BorderBottomColor: var(--pf-t--global--border--color--default);

  // header
  --#{$code-editor}__header--before--BorderBottomWidth: var(--pf-t--global--border--width--control--default);
  --#{$code-editor}__header--before--BorderBottomColor: var(--pf-t--global--border--color--default);
  --#{$code-editor}__header--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
  --#{$code-editor}__header--m-plain--BackgroundColor: var(--pf-t--global--background--color--primary--default);

  // header content
  --#{$code-editor}__header-content--PaddingBlockStart: var(--pf-t--global--spacer--xs);
  --#{$code-editor}__header-content--PaddingBlockEnd: var(--pf-t--global--spacer--xs);

  // upload
  --#{$code-editor}__upload--PaddingInlineStart: var(--pf-t--global--spacer--md);
  --#{$code-editor}__upload--PaddingInlineEnd: var(--pf-t--global--spacer--md);
  --#{$code-editor}__upload--PaddingBlockStart: var(--pf-t--global--spacer--md);
  --#{$code-editor}__upload--PaddingBlockEnd: var(--pf-t--global--spacer--md);
  --#{$code-editor}__upload--BorderRadius: var(--pf-t--global--border--radius--medium);

  // main
  --#{$code-editor}__main--BorderColor: var(--pf-t--global--border--color--default);
  --#{$code-editor}__main--BorderWidth: var(--pf-t--global--border--width--control--default);
  --#{$code-editor}__main--BackgroundColor: var(--pf-t--global--background--color--primary--default);
  --#{$code-editor}--m-read-only__main--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
  --#{$code-editor}__upload--before--BorderWidth: 0;
  --#{$code-editor}__upload--before--BorderColor: transparent;
  --#{$code-editor}__main--m-drag-hover--before--BorderWidth: var(--pf-t--global--border--width--divider--hover);
  --#{$code-editor}__main--m-drag-hover--before--BorderColor: var( --pf-t--global--border--color--clicked);
  --#{$code-editor}__main--m-drag-hover--after--BackgroundColor: var(--pf-t--global--background--color--primary--default);
  --#{$code-editor}__main--m-drag-hover--after--Opacity: .1;

  // code
  --#{$code-editor}__code--PaddingTop: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__code--PaddingRight: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__code--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__code--PaddingLeft: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__code-pre--FontSize: var(--pf-t--global--font--size--sm);
  --#{$code-editor}__code-pre--FontFamily: var(--pf-t--global--font--family--mono);

  // content
  --#{$code-editor}__header-main--PaddingRight: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__header-main--PaddingLeft: var(--pf-t--global--spacer--sm);

  // tab
  --#{$code-editor}__tab--BackgroundColor: var(--pf-t--global--background--color--primary--default);
  --#{$code-editor}__tab--Color: var(--pf-t--global--text--color--subtle);
  --#{$code-editor}__tab--PaddingTop: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__tab--PaddingRight: var( --pf-t--global--spacer--sm);
  --#{$code-editor}__tab--PaddingBottom: var(--pf-t--global--spacer--sm);
  --#{$code-editor}__tab--PaddingLeft: var( --pf-t--global--spacer--sm);
  --#{$code-editor}__tab--BorderTopWidth: var(--pf-t--global--border--width--control--default);
  --#{$code-editor}__tab--BorderRightWidth: var(--pf-t--global--border--width--control--default);
  --#{$code-editor}__tab--BorderBottomWidth: 0;
  --#{$code-editor}__tab--BorderLeftWidth: var(--pf-t--global--border--width--control--default);
  --#{$code-editor}__tab--BorderColor: var(--pf-t--global--border--color--default);
  --#{$code-editor}__tab--BorderRadius: var(--pf-t--global--border--radius--medium);

  // tab text
  --#{$code-editor}__tab-icon--text--MarginLeft: var(--pf-t--global--spacer--sm);
}

.#{$code-editor} {
  &.pf-m-read-only {
    --#{$code-editor}__main--BackgroundColor: var(--#{$code-editor}--m-read-only__main--BackgroundColor);
  }
}

.#{$code-editor}__header {
  position: relative;
  display: flex;

  &::before {
    position: absolute;
    inset-block-end: 0;
    inset-inline-start: 0;
    inset-inline-end: 0;
    pointer-events: none;
    content: "";
    border-block-end: var(--#{$code-editor}__header--before--BorderBottomWidth) solid var(--#{$code-editor}__header--before--BorderBottomColor);
  }
}

.#{$code-editor}__header-content {
  display: flex;
  flex: 1;
  align-items: flex-end;
  padding-block-start: var(--#{$code-editor}__header-content--PaddingBlockStart);
  padding-block-end: var(--#{$code-editor}__header-content--PaddingBlockEnd);
  background-color: var(--#{$code-editor}__header--BackgroundColor);
  border-radius: var(--#{$code-editor}__tab--BorderRadius) 0 0 0;

  &.pf-m-plain {
    --#{$code-editor}__header--BackgroundColor: var( --#{$code-editor}__header--m-plain--BackgroundColor);
  }
}

.#{$code-editor}__controls {
  display: flex;
  gap: var(--#{$code-editor}__controls--Gap);
  align-items: flex-start;
  padding-inline-start: var(--#{$code-editor}__controls--PaddingInlineStart);
}

.#{$code-editor}__header-main {
  flex-grow: 1;
  padding-inline-start: var(--#{$code-editor}__header-main--PaddingLeft);
  padding-inline-end: var(--#{$code-editor}__header-main--PaddingRight);
}

.#{$code-editor}__upload {
  position: relative;
  padding-block-start: var(--#{$code-editor}__upload--PaddingBlockStart);
  padding-block-end: var(--#{$code-editor}__upload--PaddingBlockEnd);
  padding-inline-start: var(--#{$code-editor}__upload--PaddingInlineStart);
  padding-inline-end: var(--#{$code-editor}__upload--PaddingInlineEnd);

  &::before {
    position: absolute;
    inset-block-start: var(--#{$code-editor}__upload--PaddingBlockStart);
    inset-block-end: var(--#{$code-editor}__upload--PaddingBlockEnd);
    inset-inline-start: var(--#{$code-editor}__upload--PaddingInlineStart);
    inset-inline-end: var(--#{$code-editor}__upload--PaddingInlineEnd);
    content: "";
    border: var(--#{$code-editor}__upload--before--BorderWidth) dashed var(--#{$code-editor}__upload--before--BorderColor);
    border-radius: var(--#{$code-editor}__upload--BorderRadius);
  }
}

.#{$code-editor}__main {
  position: relative;
  color: var(--#{$code-editor}__main--Color, inherit);
  background-color: var(--#{$code-editor}__main--BackgroundColor);
  border: var(--#{$code-editor}__main--BorderWidth) solid;
  border-color: var(--#{$code-editor}__main--BorderColor);
  border-radius: 0 0 var(--#{$code-editor}__tab--BorderRadius) var(--#{$code-editor}__tab--BorderRadius);

  &.pf-m-drag-hover {
    --#{$code-editor}__upload--before--BorderWidth: var(--#{$code-editor}__main--m-drag-hover--before--BorderWidth);
    --#{$code-editor}__upload--before--BorderColor: var(--#{$code-editor}__main--m-drag-hover--before--BorderColor);
  }

  // stylelint-disable selector-class-pattern
  .monaco-editor {
    background-color: var(--#{$code-editor}__main--BackgroundColor);
  }
  // stylelint-enable selector-class-pattern
}

.#{$code-editor}__header + .#{$code-editor}__main {
  border-block-start-width: 0;
}

.#{$code-editor}__code {
  position: relative;
  padding-block-start: var(--#{$code-editor}__code--PaddingTop);
  padding-block-end: var(--#{$code-editor}__code--PaddingBottom);
  padding-inline-start: var(--#{$code-editor}__code--PaddingLeft);
  padding-inline-end: var(--#{$code-editor}__code--PaddingRight);

  .#{$code-editor}__code-pre {
    font-family: var(--#{$code-editor}__code-pre--FontFamily);
    font-size: var(--#{$code-editor}__code-pre--FontSize);
    white-space: pre-wrap;
  }
}

.#{$code-editor}__tab {
  position: relative;
  display: flex;
  align-items: center;
  padding-block-start: var(--#{$code-editor}__tab--PaddingTop);
  padding-block-end: var(--#{$code-editor}__tab--PaddingBottom);
  padding-inline-start: var(--#{$code-editor}__tab--PaddingLeft);
  padding-inline-end: var(--#{$code-editor}__tab--PaddingRight);
  color: var(--#{$code-editor}__tab--Color);
  background-color: var(--#{$code-editor}__tab--BackgroundColor);
  border-color: var(--#{$code-editor}__tab--BorderColor);
  border-style: solid;
  border-block-start-width: var(--#{$code-editor}__tab--BorderTopWidth);
  border-block-end-width: var(--#{$code-editor}__tab--BorderBottomWidth);
  border-inline-start-width: var(--#{$code-editor}__tab--BorderLeftWidth);
  border-inline-end-width: var(--#{$code-editor}__tab--BorderRightWidth);
  border-radius: 0 var(--#{$code-editor}__tab--BorderRadius) 0 0;
}

.#{$code-editor}__tab-icon + .#{$code-editor}__tab-text {
  margin-inline-start: var(--#{$code-editor}__tab-icon--text--MarginLeft);
}

